# regalation_ontology

./: .gitignore  README.md  ontology_base.html  ontology_base.owl  pyproject.toml  requirements.lock.txt  run.bat  run_tests.bat
src/: OntologyBuilder.py
src/cli/: main.py
src/ontology/: base_ontology.py  builder.py  visualizer.py
src/requirements/: graph_builder.py  model.py
src/requirements/data/: requirement_R001.html  requirement_R001.json  requirement_R001.owl  requirement_R002.html  requirement_R002.json  requirement_R002.owl  requirement_R003.html  requirement_R003.json  requirement_R003.owl  requirement_R004.html  requirement_R004.owl
tests/: test_base_ontology.py  test_requirement_addition.py
