[project]
requires-python = ">= 3.12"
name = "ontology_project"
version = "0.1.0"
description = "Онтология элементов строительства с RDF/OWL, визуализацией и графовой БД"
authors = [{name = "Flair Team", email = "info@flairbim.com"}]
dependencies = [
    "owlready2",
    "pyvis",
    "neo4j",
    "typer",
    "pydantic",
    "python-dotenv",
]


